Infrastructure/kubernetes-old/ingress/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: rekeningrijden.nl
      http:
        paths:
          - path: /api/Car
            pathType: Prefix
            backend:
              service:
                name: carmicroservice
                port:
                  number: 80
